log
ju., 12 de may. de 2022 18:12:33: 
 tests:  0|5
total_score: 0/70
c1baf60
ju., 12 de may. de 2022 18:17:18: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  2|4
total_score: 15/70
b6810cb
vi., 13 de may. de 2022  0:00:20: 
 sudoku.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 55 insertions(+)
 tests:  2|4
total_score: 15/70
950abfd
Fri May 13 14:58:49 UTC 2022: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:95:11: error: ‘p’ undeclared (first use in this function)
       for(p=0;p<9;p++)
           ^
sudoku.c:95:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:98:15: error: unused variable ‘j’ [-Werror=unused-variable]
           int j=3*(k%3) + (p%3) ;
               ^
sudoku.c:97:15: error: unused variable ‘i’ [-Werror=unused-variable]
           int i=3*(k/3) + (p/3) ;
               ^
cc1: all warnings being treated as errors
Compilation failed
aadd03b
Fri May 13 14:59:24 UTC 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
adc57bd
Fri May 13 15:13:18 UTC 2022: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:101:18: error: expected expression before ‘{’ token
       array [10]={}
                  ^
sudoku.c:107:31: error: stray ‘\302’ in program
         if(valor != 0 && array¨[valor-1] == 1)
                               ^
sudoku.c:107:32: error: stray ‘\250’ in program
         if(valor != 0 && array¨[valor-1] == 1)
                                ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d095f44
